--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
+<html>
+<!------------------------------------------ -->
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>Examen THYP du 7 décembre 2020</title>
+
+</head>
+
 <body>
-	
+    
+
 </body>
 
-<head>
-	
-</head>
+
+</html>
